Rule slider improvements: Fixed alignment issue (+ and - buttons were overflowing column right side, looked slightly off-center). Removed +/- button borders to reduce clutter, increased icon size.

--- a/frontend/api/static/api/sliders.css
+++ b/frontend/api/static/api/sliders.css
@@ -7,7 +7,7 @@
 /* Slider bar size */
 .rangeslider--horizontal {
     height: 10px;
-    width: 90%;
+    width: 100%;
 }
 /* Applies to entire slider background */
 .rangeslider,
